--- a/tailwind-sandbox/tailwind-sandbox-starter/01-utility-first/index.html
+++ b/tailwind-sandbox/tailwind-sandbox-starter/01-utility-first/index.html
@@ -9,5 +9,23 @@
   </head>
   <body>
     <!-- Utility First -->
+    <div
+      class="flex items-center p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg shadow-red-600 space-x-4 mt-60 border border-blue-700"
+    >
+      <img class="w-12 h-12" src="../assets/img/warning.svg" alt="" />
+
+      <div>
+        <div class="text-xl font-medium text-black">Are you Sure?</div>
+        <p class="ext-slate-600">You are about to delete a post</p>
+        <button class="bg-red-500 rounded-sm m-1 p-1 text-white">
+          Yep, I know..
+        </button>
+        <button
+          class="bg-white rounded-sm m-1 p-1 text-green-500 underline border border-red-200"
+        >
+          No Wait!
+        </button>
+      </div>
+    </div>
   </body>
 </html>
