--- a/tailwind-sandbox/tailwind-sandbox-starter/02-colors/index.html
+++ b/tailwind-sandbox/tailwind-sandbox-starter/02-colors/index.html
@@ -9,24 +9,294 @@
   </head>
   <body>
     <!-- Default colors -->
-    <!-- white, black, red, green, blue, orange, yellow, purple, lime, emerald, teal, cyan, indigo, violet, fuchsia, pink, rose, sky, gray, slate, zinc, neutral, stone, amber,  -->
+
+    <!-- 
+      white, black, red, green, blue, orange, yellow, purple,
+      lime, emerald, teal, cyan, indigo, violet, fuchsia, pink,
+      rose, sky, gray, slate, zinc, neutral, stone, amber,
+     -->
 
     <!-- Text Colors -->
+    <!-- <div class="bg-gray border border-blue-700 m-4 p-2 grid gap-2">
+      <h2 class="text-xl shadow shadow-blue-700 p-2 bg-white">
+        These are TailwindCSS text-colors ⬇️
+      </h2>
+      <p class="text-black p-2 border border-blue-200 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-red-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="text-green-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-blue-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-orange-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-yellow-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-purple-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-lime-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-emerald-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-teal-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-cyan-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-indigo-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-violet-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-fuchsia-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-rose-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-sky-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="text-slate-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-zinc-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-neutral-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-stone-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="text-amber-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+    </div>
+    -->
 
     <!-- Background Colors -->
+    <!-- <div class="bg-gray border border-blue-700 m-4 p-2 grid gap-2 text-white">
+      <h2 class="bg-xl shadow shadow-blue-700 p-2 bg-purple-700">
+        These are TailwindCSs Text-Background ⬇️
+      </h2>
+      <p class="bg-black p-2 border border-blue-200 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-red-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-green-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-blue-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-orange-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-yellow-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-purple-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-lime-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-emerald-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-teal-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-cyan-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-indigo-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-violet-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-fuchsia-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-rose-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-sky-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-slate-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-zinc-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-neutral-500 p-2 border border-blue-200">
+        Tailwind is awesome
+      </p>
+      <p class="bg-stone-500 p-2 border border-blue-200">Tailwind is awesome</p>
+      <p class="bg-amber-500 p-2 border border-blue-200">Tailwind is awesome</p>
+    </div> -->
 
     <!-- Text Underline -->
+    <!-- <div class="bg-gray border border-blue-700 m-4 p-2 grid gap-2 text-white">
+      <h2 class="bg-xl shadow shadow-blue-700 p-2 bg-purple-700">
+        These are TailwindCSs Text-Background ⬇️
+      </h2>
+      <p
+        class="bg-black p-2 border border-blue-200 underline border border-blue-200 underline underline"
+      >
+        Tailwind is awesome
+      </p>
+      <p class="bg-red-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-green-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-blue-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-orange-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-yellow-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-purple-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-lime-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-emerald-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-teal-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-cyan-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-indigo-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-violet-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-fuchsia-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-rose-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-sky-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-slate-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-zinc-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-neutral-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-stone-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-amber-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+    </div> -->
 
     <!-- Border Colors -->
+    <!-- <div class="bg-gray border border-blue-700 m-4 p-2 grid gap-2 text-white">
+      <h2 class="bg-xl shadow shadow-blue-700 p-2 bg-purple-700">
+        These are TailwindCSs Border Colors ⬇️
+      </h2>
+      <p
+        class="bg-black p-2 border border-blue-200 underline border border-blue-200 underline underline"
+      >
+        Tailwind is awesome
+      </p>
+      <p class="bg-red-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-green-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-blue-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-orange-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-yellow-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-purple-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-lime-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-emerald-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-teal-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-cyan-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-indigo-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-violet-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-fuchsia-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-rose-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-sky-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-slate-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-zinc-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-neutral-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-stone-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+      <p class="bg-amber-500 p-2 border border-blue-200 underline">
+        Tailwind is awesome
+      </p>
+    </div> -->
 
     <!-- Divide Colors -->
+    <div class="divide-y divide-blue-300">
+      <div>Item 1</div>
+      <div>Item 2</div>
+      <div>Item 3</div>
+      <div>Item 4</div>
+      <div>Item 5</div>
+    </div>
 
     <!-- Outline Colors -->
+    <button class="outline outline-blue-500">Hello</button>
+    <button class="outline outline-blue-500">Hello</button>
 
     <!-- Box Shadow Colors (Opacity defaults to 100, but you can set it)-->
-
+    <button class="shadow-lg bg-cyan-500">Subscribe</button>
+    <button class="shadow-lg bg-purple-500 text-white p-2">Subscribe</button>
     <!-- Accent Colors -->
-
+    <input type="checkbox" class="accent-purple-500" checked />
+    <input type="checkbox" class="accent-red-500" checked />
     <!-- Arbitrary Colors -->
+    <div class="text-white p-2">
+      <div class="bg-[#427a2b]">bg-[#427a2b]</div>
+      <div class="bg-[rgb(255,0,0)]">bg-[rgb(255,0,0)]</div>
+      <div class="bg-[steelblue]">bg-[steelblue]</div>
+    </div>
   </body>
 </html>
