--- a/tailwind-sandbox/tailwind-sandbox-starter/05-sizing/index.html
+++ b/tailwind-sandbox/tailwind-sandbox-starter/05-sizing/index.html
@@ -9,26 +9,40 @@
   </head>
   <body>
     <!-- Width -->
+    <div class="bg-black text-white w-96">TailWind</div>
 
     <!-- Percentages -->
 
     <!-- Width of the viewport -->
-
+    <div class="bg-blue-500 text-white w-screen">Hello</div>
     <!-- 100% of container -->
+    <div class="bg-blue-500 text-white w-full">Hello</div>
 
     <!-- min/max content -->
 
     <!-- Arbitrary width -->
+    <div class="bg-blue-500 text-white w-[300px]">Hello</div>
 
     <!-- Max Width -->
-
+    <!-- <div class="bg-gray-300 max-w-lg mx-auto">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+      sapiente cum quo nostrum a similique. Officia blanditiis labore quam
+      dolorem corporis porro nulla, illum amet laborum error quaerat libero
+      aspernatur.
+    </div> -->
     <!-- Height (Most of the same options as widths) -->
+    <!-- <div class="bg-orange-500 w-20 h-24">Hello</div>
+    <div class="bg-orange-500 w-20 h-32">Hello</div>
+    <div class="bg-orange-500 w-20 h-48">Hello</div>
+    <div class="bg-orange-500 w-20 h-64">Hello</div>
+    <div class="bg-orange-500 w-20 h-96">Hello</div> -->
 
     <!-- Min Height -->
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-blue-200 text-white h-screen">HI</div>
   </body>
 </html>
 
