--- a/tailwind-sandbox/tailwind-sandbox-starter/03-container-spacing/index.html
+++ b/tailwind-sandbox/tailwind-sandbox-starter/03-container-spacing/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Container -->
-    <div>
+    <div class="container mx-auto">
       <article>
         <h3>Article One</h3>
         <p>
@@ -21,12 +21,36 @@
       </article>
 
       <!-- Margin -->
+      <!-- <div class="bg-slate-200 m-2">Hello</div>
+      <div class="bg-slate-200 ml-4">Hello</div>
+      <div class="bg-slate-200 mr-4">Hello</div>
+      <div class="bg-slate-200 mt-4">Hello</div>
+      <div class="bg-slate-200 mb-4">Hello</div> -->
 
       <!-- Padding -->
+      <!-- <div class="bg-slate-200 p-2">Hello</div>
+      <div class="bg-slate-200 pl-4">Hello</div>
+      <div class="bg-slate-200 pr-4">Hello</div>
+      <div class="bg-slate-200 pt-4">Hello</div>
+      <div class="bg-slate-200 pb-4">Hello</div> -->
 
       <!-- Space Between X -->
+      <div class="flex mt-24 space-x-6">
+        <div>Items1</div>
+        <div>Items2</div>
+        <div>Items3</div>
+        <div>Items4</div>
+        <div>Items5</div>
+      </div>
 
       <!-- Space Between Y -->
+      <div class="flex flex-col mt-24 space-y-4">
+        <div>Items1</div>
+        <div>Items2</div>
+        <div>Items3</div>
+        <div>Items4</div>
+        <div>Items5</div>
+      </div>
     </div>
   </body>
 </html>
