--- a/tailwind-sandbox/tailwind-sandbox-starter/04-typography/index.html
+++ b/tailwind-sandbox/tailwind-sandbox-starter/04-typography/index.html
@@ -4,27 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          fontFamily: {
+            sans: ["ui-sans-serif", "system-ui"],
+            serif: ["Poor Story", "Georgia"],
+            Mono: ["ui-monospace", "SFMono-Regular"],
+          },
+        },
+      };
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
+    <!-- <div class="font-sans">TailWind is awsome</div>
+    <div class="font-serif">Tawilwind is aswsome</div>
+    <div class="font-mono">Tawilwind is aswsome</div> -->
 
     <!-- Font Size -->
+    <!-- <div class="text-xs">TailWind is Awesome</div>
+    <div class="text-sm">TailWind is Awesome</div>
+    <div class="text-base">TailWind is Awesome</div>
+    <div class="text-lg">TailWind is Awesome</div>
+    <div class="text-xl">TailWind is Awesome</div>
+    <div class="text-2xl">TailWind is Awesome</div>
+    <div class="text-9xl">TailWind is Awesome</div> -->
 
     <!-- Font Weight -->
+    <!-- <div class="font-light">TailWind is Awesome</div>
+    <div class="font-normal">TailWind is Awesome</div>
+    <div class="font-medium">TailWind is Awesome</div>
+    <div class="font-semibold">TailWind is Awesome</div>
+    <div class="font-bold">TailWind is Awesome</div> -->
 
     <!-- Letter Spacing -->
+    <!-- <div class="tracking-tight">TailWind is Awesome</div>
+    <div class="tracking-normal">TailWind is Awesome</div>
+    <div class="tracking-wide">TailWind is Awesome</div>
+    <div class="tracking-wider">TailWind is Awesome</div>
+    <div class="tracking-widest">TailWind is Awesome</div> -->
 
     <!-- Text Alignment -->
+    <div class="text-left">TailWind is Awesome</div>
+    <div class="text-center">TailWind is Awesome</div>
+    <div class="text-right">TailWind is Awesome</div>
 
     <!-- Text Decoration -->
+    <!-- <div class="underline decoration-4 decoration-blue-500 decoration-double">
+      TailWind is Awesome
+    </div>
+    <div class="underline decoration-dotted">TailWind is Awesome</div>
+    <div class="underline decoration-dashed">TailWind is Awesome</div>
+    <div class="underline decoration-wavy">TailWind is Awesome</div> -->
 
     <!-- Decoration Style -->
 
     <!-- Decoration Offset -->
+    <div class="underline decoration-2 decoration-blue-500 underline-offset-8">
+      TailWind is Awesome
+    </div>
 
     <!-- Text Transform -->
+    <p class="uppercase">Tailwind is Awesome</p>
+    <p class="normal-case">Tailwind is Awesome</p>
+    <p class="lowercase">Tailwind is Awesome</p>
+    <p class="capitalize">Tailwind is Awesome</p>
   </body>
 </html>
 
